# mz-fastapi

./: pyproject.toml
mz_fastapi/: app.py  handlers.py  monitor.py
tests/: test_mz_fastapi.py
