[tool.poetry]
name = "mz-fastapi"
version = "0.1.0"
description = ""
authors = ["Josh Wills <josh@weavegrid.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
psycopg = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
